--- a/_pages/research.html
+++ b/_pages/research.html
@@ -4,3 +4,11 @@ title: "Research"
 permalink: /research/
 author_profile: true
 ---
+
+1. Immigrec Research Project, McGill University
+
+2. Database Development Project, McGill University
+
+3. Projet Montréal-Nord- Un outil informationnel pour mieux coordonner l'offre de services pour les nouveaux arrivants, ENAP
+
+4. Comperative Study on Regional Immigration Policies in Canada and Australia
