--- a/_pages/research.html
+++ b/_pages/research.html
@@ -5,10 +5,13 @@ permalink: /research/
 author_profile: true
 ---
 
-1. Immigrec Research Project, McGill University
+1. Comperative Study on Regional Immigration Policies in Canada and Australia<br>
 
-2. Database Development Project, McGill University
 
-3. Projet Montréal-Nord- Un outil informationnel pour mieux coordonner l'offre de services pour les nouveaux arrivants, ENAP
+2. Projet Montréal-Nord- Un outil informationnel pour mieux coordonner l'offre de services pour les nouveaux arrivants, ENAP<br>
 
-4. Comperative Study on Regional Immigration Policies in Canada and Australia
+3. <a href="https://immigrec.com/">Immigrec</a> Research Project, McGill University<br>
+
+4. Database Development Project, McGill University<br>
+
+
