--- a/_pages/research.html
+++ b/_pages/research.html
@@ -7,6 +7,8 @@ author_profile: true
 
 1. Comperative Study on Regional Immigration Policies in Canada and Australia<br>
 
+<embed src="file_name.pdf" width="800px" height="2100px" />
+
 
 2. Projet Montréal-Nord- Un outil informationnel pour mieux coordonner l'offre de services pour les nouveaux arrivants, ENAP<br>
 
